# classical-logic

./: .gitignore  .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml  tox.ini
classical-logic/: core.py  parsing.py
classical_logic/: __init__.py  core.py  parsing.py
docs/: index.md  reference.md  requirements.txt  user-guide.md
docs/stylesheets/: extra.css
flogic/: __init__.py  core.py  parsing.py
plogic/: __init__.py  core.py  parse.py  parsing.py  prop.py
tests/: lex.py  parse.py  test_core.py  test_parsing.py  test_prop.py
