[tool.poetry]
name = "plogic"
version = "0.1.0"
description = "Python package for propositional logic."
authors = ["Ederic <edericoytas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
tox = "^4.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
