[tool.poetry]
name = "plogic"
version = "0.1.0"
description = "Python package for propositional logic."
authors = ["Ederic <edericoytas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
tox = "^4.6.3"


[tool.poetry.group.format.dependencies]
black = "^23.3.0"


[tool.poetry.group.type.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
