[tool.poetry]
name = "plogic"
version = "0.1.0"
description = "Python package for propositional logic."
authors = ["Ederic <edericoytas@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ederic-oytas/plogic"
repository = "https://github.com/ederic-oytas/plogic"
keywords = [
    "and",
    "biconditional",
    "conditional",
    "conjunction",
    "connective",
    "disjunction",
    "if and only if",
    "iff",
    "implies",
    "implication",
    "logic",
    "logical connective",
    "negation",
    "not",
    "or",
    "plogic",
    "proposition",
    "propositional calculus",
    "propositional logic",
    "sentence",
    "sentential calculus",
    "sentential logic",
    "statement logic",
    "zeroth-order logic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
tox = "^4.6.3"


[tool.poetry.group.style.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"


[tool.poetry.group.type.dependencies]
mypy = "^1.4.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
